@@ -36,9 +36,10 @@ import net.minecraft.inventory.Inventory;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.network.PacketByteBuf;
 import net.minecraft.recipe.*;
+import net.minecraft.registry.Registries;
+import net.minecraft.registry.Registry;
 import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.util.Identifier;
-import net.minecraft.util.registry.Registry;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.NotNull;
@@ -181,7 +182,7 @@ public class NbtCrafting implements ModInitializer {
 	public static <T extends Recipe<?>> RecipeType<T> registerRecipeType(String name) {
 		Identifier recipeTypeId = new Identifier(MOD_ID, name);
 		RecipeTypeHelper.addToSyncBlacklist(recipeTypeId);
-		return Registry.register(Registry.RECIPE_TYPE, recipeTypeId, new RecipeType<T>() {
+		return Registry.register(Registries.RECIPE_TYPE, recipeTypeId, new RecipeType<T>() {
 			@Override
 			public String toString() {
 				return MOD_ID + ":" + name;
@@ -192,7 +193,7 @@ public class NbtCrafting implements ModInitializer {
 	public static <S extends RecipeSerializer<T>, T extends Recipe<?>> S registerRecipeSerializer(String name, S recipeSerializer) {
 		Identifier serializerId = new Identifier(MOD_ID, name);
 		RecipeTypeHelper.addToSyncBlacklist(serializerId);
-		return Registry.register(Registry.RECIPE_SERIALIZER, serializerId, recipeSerializer);
+		return Registry.register(Registries.RECIPE_SERIALIZER, serializerId, recipeSerializer);
 	}
 
 	public static List<PacketByteBuf> createAdvancedRecipeSyncPackets(RecipeManager recipeManager) {
@@ -204,7 +205,7 @@ public class NbtCrafting implements ModInitializer {
 				}
 			}
 			return false;
-		}).collect(Collectors.toList());
+		}).toList();
 
 		List<PacketByteBuf> packets = new ArrayList<>();
 		PacketByteBuf buf = new PacketByteBuf(Unpooled.buffer());
@@ -213,7 +214,7 @@ public class NbtCrafting implements ModInitializer {
 		for (Recipe<?> recipe : recipes) {
 			@SuppressWarnings("rawtypes")
 			RecipeSerializer serializer = recipe.getSerializer();
-			buf.writeIdentifier(Registry.RECIPE_SERIALIZER.getId(serializer));
+			buf.writeIdentifier(Registries.RECIPE_SERIALIZER.getId(serializer));
 			buf.writeIdentifier(recipe.getId());
 			//noinspection unchecked
 			serializer.write(buf, recipe);
